# rust_game

./: Cargo.toml
src/: enemy.rs  game_rules.rs  gun.rs  main.rs  main_scene.rs  new_person.rs  rust_game_plugin.rs  wall.rs
src/enemy/: mod.rs  models.rs
src/gun/: bullet.rs  mod.rs  models.rs
src/gun/bullet/: models.rs
src/person/: mod.rs  models.rs
src/scenes/main/: mod.rs
src/wall/: mod.rs  models.rs
