[package]
name = "rust_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [target.aarch64-unknown-linux-gnu]
# linker = "G:\\Programs\\SysGCC\\bin\\aarch64-linux-gnu-gcc.exe"

[dependencies]
bevy = "0.8.0"
rand = "0.8.5"